appId: com.mmazzarolo.breathly
---
- runFlow:
    when:
      platform: Android
    commands:
      - back
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "Customizations"
- extendedWaitUntil:
    visible:
      id: "settings.screen"
    timeout: 5000
